<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.dolphinemu.dolphinemu.activities.EmulationActivity">

    <item
        android:id="@+id/menu_emulation_edit_layout"
        android:title="@string/emulation_edit_layout"/>

    <item
        android:id="@+id/menu_emulation_toggle_controls"
        android:title="@string/emulation_toggle_controls"/>

    <item
        android:id="@+id/menu_emulation_adjust_scale"
        android:title="@string/emulation_control_scale"/>

    <item
        android:id="@+id/menu_emulation_joystick_settings"
        android:title="@string/emulation_joystick_settings"/>

    <item
        android:id="@+id/menu_emulation_choose_controller"
        android:title="@string/emulation_choose_controller"/>

</menu>